strip_brlens_print now handles scientific notation. And TODO updated.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Check new tree formats (scientific etc) in BEAST and MrBayes 3.2!
+Check new tree formats (figtree etc) in BEAST and MrBayes 3.2!
 
 Warn if jump == 0
 
