--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 Check new tree formats (figtree etc) in BEAST and MrBayes 3.2!
 
+Handle rooting info ('[&R]')? That is, keep if present in altnex format?
+
+./burntrees.pl -st=10 -e=20  -f=a BEAST_174.trees -> extra "END;" when -f=a
+
 Warn if jump == 0
 
 Warn if jump > trees in file(+/- 1?)
@@ -13,5 +17,7 @@ Use --concatenate flag
 If several files, use --burnins=10,10,10 ?
 
 Check burnins (check if @burnins are several) ?
+
+Test pb33f.trace, pb33f.treelist
 
 
